--- a/2022-11-14-spring-aop/pom.xml
+++ b/2022-11-14-spring-aop/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>5.3.23</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>5.3.23</version>
+		</dependency>
 
 	</dependencies>
 
