--- a/spring-basics-demo/pom.xml
+++ b/spring-basics-demo/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>spring-beans</artifactId>
 			<version>5.3.23</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 
 	</dependencies>
 
