--- a/2022-11-23-jpa-flow5_6-oneToManyManyToOneBi-eldar/src/main/resources/application.properties
+++ b/2022-11-23-jpa-flow5_6-oneToManyManyToOneBi-eldar/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 # tell jpa to create database tables for entity classes
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # print the SQL queries to the console
 spring.jpa.show-sql=true
