--- a/2022-12-07-spring-web-eldar/pom.xml
+++ b/2022-12-07-spring-web-eldar/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
