--- a/2022-12-12-spring-drill/pom.xml
+++ b/2022-12-12-spring-drill/pom.xml
@@ -46,6 +46,10 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
