--- a/2022-12-12-spring-drill/src/main/resources/application.properties
+++ b/2022-12-12-spring-drill/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 # tell jpa to create database tables for entity classes
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # print the SQL queries to the console
 spring.jpa.show-sql=true
