--- a/dictionary-drill-web/bin/pom.xml
+++ b/dictionary-drill-web/bin/pom.xml
@@ -47,7 +47,10 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.13</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
