--- a/2023-01-16-jwt-sever-demo/pom.xml
+++ b/2023-01-16-jwt-sever-demo/pom.xml
@@ -37,7 +37,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- JWT libraries -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
@@ -67,6 +67,13 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.14</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
