micro services hystrix

--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
 spring.application.name=service-a
-spring.config.import=configserver:http://localhost:8888
+#spring.config.import=configserver:http://localhost:8888
+spring.config.location=configserver:http://localhost:8888
 server.port=7001
