--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+spring.application.name=gateway
+#spring.config.import=configserver:http://localhost:8888
+spring.config.location=configserver:http://localhost:8888
