--- a/service-a/src/main/resources/application.properties
+++ b/service-a/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=service-a
 #spring.config.import=configserver:http://localhost:8888
 spring.config.location=configserver:http://localhost:8888
 server.port=7001
+
+# expose actuator endpoints
+management.endpoints.web.exposure.include=hystrix.stream, info, health
